[tool.poetry]
name = "hpcflow"
version = "0.0.0"
description = "Computational workflow management."
authors = ["aplowman <adam.jp@live.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
ipykernel = "^6.5.0"
twine = "^3.6.0"
wheel = "^0.37.0"
autopep8 = "^1.6.0"
pytest = "^6.2.5"
pyinstaller = "^4.7"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.plugins."console_scripts"]
hpcflow-cli = "hpcflow.cli:hello"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
